# hermes-legacy

./: .gitignore  AUTHORS  CMakeLists.txt
hermes1d/examples/: CMakeLists.txt
hermes1d/examples/laplace_timedep/: CMakeLists.txt  definitions.cpp  main.cpp
hermes1d/examples/system_pendulum/: main.cpp
hermes2d/benchmarks-general/: CMakeLists.txt
hermes2d/benchmarks-general/layer-boundary/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
hermes2d/benchmarks-general/layer-boundary/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/layer-interior/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
hermes2d/benchmarks-general/layer-interior/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/lshape/: CMakeLists.txt  definitions.cpp  definitions.h  lshape-round.mesh  main.cpp
hermes2d/benchmarks-general/lshape/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/moving-front/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp  plot_error_history.py  run
hermes2d/benchmarks-general/moving-front-non-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp  plot_error_history.py  run
hermes2d/benchmarks-general/moving-front-space-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  plot_graph.py  run
hermes2d/benchmarks-general/moving-front-time-adapt/: CMakeLists.txt  main.cpp  plot_error_history.py  plot_time_step_history.py  run
hermes2d/benchmarks-general/moving-front-time-adapt/tests/: CMakeLists.txt
hermes2d/benchmarks-general/neutronics-2-group-adapt/: definitions.cpp  definitions.h  main.cpp  problem_data.h  square.mesh
hermes2d/benchmarks-general/neutronics-2-group-adapt/tests/: main.cpp
hermes2d/benchmarks-general/neutronics-heat-conduction/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp
hermes2d/benchmarks-general/neutronics-heat-conduction/adaptive/: CMakeLists.txt  main.cpp  run  views.cpp  views.h
hermes2d/benchmarks-general/neutronics-heat-conduction/non-adaptive/: CMakeLists.txt  main.cpp  run
hermes2d/benchmarks-general/neutronics-heat-conduction/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/nonsym-check/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp
hermes2d/benchmarks-general/nonsym-check/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/screen/: CMakeLists.txt  definitions.cpp  definitions.h  fresnl.c  main.cpp  run  screen-quad.mesh  screen-tri.mesh
hermes2d/benchmarks-general/screen/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/smooth-aniso-x/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp
hermes2d/benchmarks-general/smooth-aniso-x/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/smooth-aniso-y/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  square_quad.mesh
hermes2d/benchmarks-general/smooth-aniso-y/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/smooth-iso/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  square_quad.mesh  square_tri.mesh
hermes2d/benchmarks-general/smooth-iso/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/stabilized-advection-diffusion/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  square_quad.mesh
hermes2d/benchmarks-general/stabilized-advection-diffusion/tests/: CMakeLists.txt  main.cpp
hermes2d/benchmarks-general/stabilized-advection-reaction/: definitions.cpp  definitions.h  main.cpp  plot_graph.py  run  square.mesh
hermes2d/benchmarks-general/stabilized-advection-reaction/tests/: CMakeLists.txt  main.cpp
hermes2d/examples/miscellaneous/: CMakeLists.txt
hermes2d/examples/miscellaneous/adapt-quad-1/: CMakeLists.txt  definitions.cpp  definitions.cpp.orig  definitions.h  domain.mesh  domain.mesh.lshape  domain.mesh.square  main.cpp  main.cpp.orig
hermes2d/examples/miscellaneous/adapt-quad-2/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  motor.mesh
hermes2d/examples/miscellaneous/eigen-adapt-iter/: CMakeLists.txt  definitions.cpp  definitions.h  domain_hole_quads.mesh  domain_hole_trias.mesh  domain_lshape_quad_sym.mesh  domain_lshape_tria_nonsym.mesh  domain_square_quad_1_sym.mesh  domain_square_quad_2_nonsym.mesh  domain_square_quad_2_sym.mesh  domain_square_tria_nonsym.mesh  main.cpp
hermes2d/examples/miscellaneous/first-order-equation-by-dgfem/: CMakeLists.txt  definitions.cpp  definitions.h  domain.mesh  main.cpp
hermes2d/examples/miscellaneous/first-order-equation-by-fem/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
hermes2d/examples/miscellaneous/optimal-meshes/: CMakeLists.txt  a.mesh  a.mesh.1  b.mesh  b.mesh.1  definitions.cpp  definitions.h  main.cpp  square_1_elem.mesh  square_2_elem.mesh
hermes2d/examples/miscellaneous/singular-perturbation/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  square.mesh
hermes2d/examples/richards/: CMakeLists.txt
hermes2d/examples/richards/basic/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  square.mesh
hermes2d/examples/richards/basic-ie/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
hermes2d/examples/richards/basic-ie-newton/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
hermes2d/examples/richards/basic-ie-picard/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
hermes2d/examples/richards/basic-rk/: CMakeLists.txt  definitions.cpp
hermes2d/examples/richards/basic-rk-newton/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  square.mesh
hermes2d/examples/richards/basic-rk-newton-adapt/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp  plot_graph.py  run
hermes2d/tutorial/: CMakeLists.txt
hermes2d/tutorial/P02-nonlinear/: CMakeLists.txt
hermes2d/tutorial/P03-transient/: CMakeLists.txt
hermes2d/tutorial/P04-adaptivity/: CMakeLists.txt
hermes2d/tutorial/P05-eigenproblems/: CMakeLists.txt
hermes2d/tutorial/P07-trilinos/: CMakeLists.txt
hermes2d/tutorial/P08-miscellaneous/: CMakeLists.txt
(+760 files in other folders)
