add_subdirectory(first_order_general)
add_subdirectory(homogeneous_line)
add_subdirectory(laplace_bc_dirichlet)
add_subdirectory(laplace_bc_neumann)
add_subdirectory(laplace_bc_newton)
add_subdirectory(laplace_bc_newton2)
add_subdirectory(laplace_timedep)
add_subdirectory(neutronics)

if(WITH_PYTHON)
#  FIXME: not adapted to the latest API
    add_subdirectory(schroedinger)
    #add_subdirectory(dirac)
#  add_subdirectory(system_sin_eigen)
endif(WITH_PYTHON)

add_subdirectory(system_car_model)
add_subdirectory(system_chaotic)
add_subdirectory(system_exp)
add_subdirectory(system_neutronics_eigenvalue)
add_subdirectory(system_neutronics_fixedsrc)
#TODO : this does not work on Windows.
IF((NOT NMAKE) AND (NOT MSVC))
	add_subdirectory(system_neutronics_fixedsrc2)
ENDIF((NOT NMAKE) AND (NOT MSVC))
add_subdirectory(system_pendulum)
add_subdirectory(system_sin)
