# Linear problems.
add_subdirectory(P01-linear)

# Nonlinear problems.
add_subdirectory(P02-nonlinear)

# Time-dependent problems.
add_subdirectory(P03-transient)

# Adaptivity.
add_subdirectory(P04-adaptivity)

# Eigenproblems.
add_subdirectory(P05-eigenproblems)

# FVM and DG.
add_subdirectory(P06-fvm-and-dg)

# Using Trilinos.
add_subdirectory(P07-trilinos)

# Miscellaneous techniques.
add_subdirectory(P08-miscellaneous)
