add_subdirectory(adapt-quad-1)
add_subdirectory(adapt-quad-2)
add_subdirectory(eigen-adapt-iter)
#add_subdirectory(eigenvalue-h2p)
add_subdirectory(first-order-equation-by-fem)
add_subdirectory(first-order-equation-by-dgfem)
add_subdirectory(optimal-meshes)
add_subdirectory(singular-perturbation)
if(H2D_WITH_GLUT)
  add_subdirectory(view)
endif(H2D_WITH_GLUT)
