add_subdirectory(basic-ie) 
add_subdirectory(basic-rk) 
#add_subdirectory(capillary-barrier-adapt) # Newton fails.
#add_subdirectory(capillary-barrier-rk) TODO: Convert to new forms.
#add_subdirectory(seepage-adapt) TODO: Convert to new forms.
#add_subdirectory(tracy-adapt) TODO: Convert to new forms.
