# Adaptivity.
add_subdirectory(01-intro)
add_subdirectory(02-system)
add_subdirectory(03-general)
add_subdirectory(04-complex)
add_subdirectory(05-hcurl)
add_subdirectory(06-exact)
add_subdirectory(07-nonlinear)
add_subdirectory(08-transient-space-only)
add_subdirectory(09-transient-time-only)
add_subdirectory(10-transient-space-and-time)





