# Adaptivity.
add_subdirectory(01-intro)
add_subdirectory(02-system)
add_subdirectory(03-complex)
add_subdirectory(04-hcurl)
add_subdirectory(05-exact)
add_subdirectory(06-nonlinear)
add_subdirectory(07-transient-space-only)
add_subdirectory(08-transient-time-only)
add_subdirectory(09-transient-space-and-time)





