if(NOT H2D_REAL)
    return()
endif(NOT H2D_REAL)
project(test-benchmark-stabilized-advection-diffusion)

add_executable(${PROJECT_NAME} main.cpp ../definitions.cpp)
include (${hermes2d_SOURCE_DIR}/CMake.common)
set_common_target_properties(${PROJECT_NAME})
set(BIN ${PROJECT_BINARY_DIR}/${PROJECT_NAME})
add_test(test-benchmark-stabilized-advection-diffusion ${BIN} CG)
add_test(test-benchmark-stabilized-advection-diffusion-supg ${BIN} SUPG)
add_test(test-benchmark-stabilized-advection-diffusion-gls_1 ${BIN} GLS_1)
add_test(test-benchmark-stabilized-advection-diffusion-gls_2 ${BIN} GLS_2)
add_test(test-benchmark-stabilized-advection-diffusion-sgs ${BIN} SGS)
add_test(test-benchmark-stabilized-advection-diffusion-sgs_alt ${BIN} SGS_ALT)
# TODO: add_test(test-benchmark-stabilized-advection-reaction-dg ${BIN} DG)
